--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.websarva.wings.android.medicationsample.ui.notifications.NotificationsFragment"
+        android:name="com.websarva.wings.android.medicationsample.ui.notifications.MedicationListFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_medication_list_list" />
 </navigation>
