--- a/app/src/main/res/layout/fragment_medication_list_list.xml
+++ b/app/src/main/res/layout/fragment_medication_list_list.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recycler_view"
-    android:name="com.websarva.wings.android.medicationsample.ui.notifications.MedicationListFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.notifications.MedicationListFragment"
-    tools:listitem="@layout/fragment_medication_list" />
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/button_to_notifications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Notifications" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:name="com.websarva.wings.android.medicationsample.ui.notifications.MedicationListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".ui.notifications.MedicationListFragment"
+        tools:listitem="@layout/fragment_medication_list" />
+</LinearLayout>
