--- a/app/src/main/res/layout/item_medication.xml
+++ b/app/src/main/res/layout/item_medication.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
 
     <TextView
@@ -15,6 +15,7 @@
         android:id="@+id/medication_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="18sp"
         android:textSize="14sp"
         android:textColor="#888888" />
 </LinearLayout>
