--- a/app/src/main/res/layout/item_medication.xml
+++ b/app/src/main/res/layout/item_medication.xml
@@ -18,4 +18,10 @@
         android:paddingLeft="18sp"
         android:textSize="14sp"
         android:textColor="#888888" />
+
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="削除" />
 </LinearLayout>
