--- a/app/src/main/res/layout/item_medication.xml
+++ b/app/src/main/res/layout/item_medication.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,21 +6,26 @@
 
     <TextView
         android:id="@+id/medication_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:layout_weight="1"
+        android:layout_marginEnd="8dp"
+        android:text="Medication Name"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/medication_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="18sp"
-        android:textSize="14sp"
-        android:textColor="#888888" />
+        android:layout_marginEnd="8dp"
+        android:gravity="end"
+        android:text="Date"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="削除" />
+        android:text="削除"
+        android:layout_marginStart="8dp" />
 </LinearLayout>
