--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications2"
-        android:name="com.websarva.wings.android.medicationsample.ui.notifications.NotificationsFragment"
+        android:name="com.websarva.wings.android.medicationsample.ui.notifications.AddMedicationFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 
@@ -29,7 +29,7 @@
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_medication_list">
 
-        <!-- MedicationListFragment から NotificationsFragment へのアクションを追加 -->
+        <!-- MedicationListFragment から AddMedicationFragment へのアクションを追加 -->
         <action
             android:id="@+id/action_medicationListFragment_to_notificationsFragment"
             app:destination="@id/navigation_notifications2" />
