--- a/app/src/main/res/layout/item_medication.xml
+++ b/app/src/main/res/layout/item_medication.xml
@@ -23,6 +23,13 @@
         android:textSize="16sp" />
 
     <Button
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="編集"
+        android:layout_marginEnd="8dp" />
+
+    <Button
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
